# gen-audio

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-lock.txt  requirements.txt  run.bat  run.sh
app/: config.py  main.py
app/api/: card_import.py  cards.py  draw.py  health.py  jobs.py  speakers.py  synthesize.py
app/core/: audio_concat.py  chat_tts.py  enhance.py  exceptions.py  migrations.py  params.py  queue.py  subtitle.py  text_chunker.py  text_norm.py  text_utils.py
app/db/: database.py  queries.py
app/storage/: files.py  speakers.py
docs/superpowers/plans/: 2026-06-11-gen-audio.md  2026-06-12-chatts-enhanced-port.md  2026-06-13-long-text-chunking.md  2026-06-13-spk-smp-cross-chunk-consistency.md  2026-06-13-spk-smp-execution.md
docs/superpowers/specs/: 2026-06-11-gen-audio-design.md
static/: draw.html  favorites.html  index.html  synthesize.html
static/css/: components.css  main.css
static/js/: api.js  draw.js  favorites.js  synthesize.js
static/js/components/: param-panel.js  speaker-picker.js
tests/: test_api_card_import.py  test_api_cards.py  test_api_draw.py  test_api_errors.py  test_api_health.py  test_api_jobs.py  test_api_speakers.py  test_api_synthesize.py  test_audio_concat.py  test_chat_tts.py  test_chat_tts_chunked.py  test_database.py  test_e2e_draw.py  test_enhance.py  test_exceptions.py  test_files.py  test_migrations.py  test_params.py  test_queries.py  test_queue.py  test_smoke.py  test_storage_speakers.py  test_subtitle.py  test_text_chunker.py  test_text_norm.py  test_text_utils.py
