[project]
name = "gen-audio"
version = "0.1.0"
description = "本地单用户 TTS 生成 + 批量合成工具"
requires-python = ">=3.11"
dependencies = [
    "chattts>=0.2.5",
    "fastapi>=0.115",
    "httpx>=0.27",
    "numpy>=2.4.6",
    "pydantic>=2.7",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "requests>=2.31",
    "torch>=2.0",
    "torchaudio>=2.0",
    "uvicorn[standard]>=0.30",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.pytest_asyncio]
default_fixture_loop_scope = "function"
